* [report] refurbished rbh-report output format
* [policies] new criteria on file creation time
* [database] use innodb by default for MySQL engine
* [system] ability to detect "fake mtime" (mtime != actual modification time)
* [system] improved filesystem detection,
           using fsname or devid as FS identifier (config driven)
* [misc.] can use short config name instead of full path
          (eg. "-f <name>" instead of "-f /full/path/to/name.conf")
* [backup] directory and symlink recovery
* [fix] max_rm_count=0 resulted in no rm (instead of unlimited)
* [lustre] port to Lustre 2.2 and 2.3
* [lustre] support for new Changelog record struct (lu-1331)

Changes between version 2.3.3 and 2.3.4:
- Faster and safer shutdown on SIGINT/SIGTERM
- Can use short config name instead of full config file path.
  E.g. "-f myconf" instead of "-f /etc/robinhood.d/tmp_fs/myconf.cfg"
- Consider all non-dirs for classinfo (instead of files only)
- Implemented max_rm_count in hsm remove policy
- clearer messages about DB connection and retries
- added lu543 configure option (must be enabled if this patch
  is integrated to your Lustre distribution)
- Better block counting for purges
- backup/shook modes:
    - import of existing files from backend
    - entry state set to 'archive_running' during migration
    - recovery for entries with 'release pending' or 'restore running' state on startup
      (new parameter: check_purge_status_on_startup)
    - enable DB rebuild if it is lost
    - fix: symlink recovery
    - improvements of rbhext_tool_clnt/svr (timeout, traces, ...)
    - user.shook_state xattr changed to security.shook_state
      (to avoid users to change it)
- Fix: Don't consider 'released' entries for quota-like purge triggers
- Fix: migrate-group did migrate user
- Generate up-to-date template automatically at RPM installation
- 72 new regression tests (all policies conditions and config file parameters are tested)

Changes between version 2.3.2 and 2.3.3:
[webgui]